--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
 			</td>
 
 			<td>
-				大象席地而坐電影配樂<br>
+				海綿寶寶席地而坐電影配樂<br>
 				<audio controls>
 					<source src="elephant.mp3" type="audio/mP3">
 				</audio><br>
