--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
 			</td>
 
 			<td>
-				不要去中國<br>
+				千萬不要去中國<br>
 				<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 			</td>
 		</tr>
