--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 
 		function change2() {
   			document.getElementById("pic").src = "cliff.jpg";
-  			document.getElementById("h2text").innerText = "Tzyy-Ching Yang";
+  			document.getElementById("h2text").innerText = "Yuan-Hsin Hsiao";
 		}
 	</script>
 </head>
@@ -31,7 +31,7 @@
 
 			<td>
 				<h1>蕭媛芯</h1>
-				<h2 id="h2text">Tzyy-Ching Yang</h2>
+				<h2 id="h2text">Yuan-Hsin Hsiao</h2>
 			</td>
 		</tr>
 	</table>
